--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,53 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Edits de CS2</title>
+    <title>Entusiastas de CS2</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Site dedicado aos entusiastas de CS2, com informações sobre a história do jogo, eventos e comunidade.">
+    <meta name="keywords" content="CS2, Counter-Strike, Major Copenhagen 2024, jogos, comunidade">
 </head>
 <body>
     <header>
-        <h1>Edits de CS2</h1>
+        <h1>Entusiastas de CS2</h1>
         <nav>
             <ul>
-                <li><a href="#home">Início</a></li>
-                <li><a href="#galeria">Galeria</a></li>
+                <li><a href="#inicio">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#major">Major Copenhagen 2024</a></li>
+                <li><a href="#edits">Edits de CS2</a></li>
                 <li><a href="#contato">Contato</a></li>
+                <li><a href="#momentos">Melhores Momentos Copenhagen 2024</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="home">
-            <h2>Bem-vindo ao mundo dos Edits de CS2!</h2>
-            <p>Aqui você encontrará uma coleção incrível de edits feitos por fãs do jogo.</p>
-        </section>
-
-        <section id="galeria">
-            <h2>Galeria de Edits</h2>
-            <div class="galeria-container">
-                <img src="link-da-imagem-1.jpg" alt="Edit 1">
-                <img src="link-da-imagem-2.jpg" alt="Edit 2">
-                <img src="link-da-imagem-3.jpg" alt="Edit 3">
-                <img src="link-da-imagem-4.jpg" alt="Edit 4">
-                <img src="link-da-imagem-5.jpg" alt="Edit 5">
-                <img src="link-da-imagem-6.jpg" alt="Edit 6">
+        <section id="inicio">
+            <h2>Sobre a Empresa</h2>
+            <p>A empresa foi fundada em 2020, com o objetivo de promover e armazenar a história do CS2. Nossos antecessores foram apaixonados por jogos e sempre buscaram criar uma comunidade forte.</p>
+            <div class="galeria">
+                <img src="imae.jpg" alt="Imagem de um evento de CS2">
+                <img src="imag.jpg" alt="Jogadores de CS2 em ação">
+                <img src="ime.jpg" alt="Equipe de CS2 comemorando">
+                <img src="ige.jpg" alt="Troféu do Major de CS2">
+                <img src="age.jpg" alt="Público assistindo a um jogo de CS2">
             </div>
         </section>
 
         <section id="sobre">
-            <h2>Sobre</h2>
-            <p>Este site é dedicado a compartilhar os melhores edits de CS2, feitos por jogadores e fãs do jogo.</p>
+            <h2>Sobre o Site</h2>
+            <p>Somos entusiastas de CS2 e criamos este site para armazenar a história do CS2, compartilhar informações sobre eventos e promover a comunidade. Aqui, você encontrará tudo sobre o jogo e seus principais momentos.</p>
+        </section>
+
+        <section id="major">
+            <h2>Major Copenhagen 2024</h2>
+            <div class="galeria-major">
+                <div class="time">
+                    <img src="image.jpg" alt="Vencedor do Major Copenhagen 2024">
+                    <p>Parabéns ao time vencedor do Major Copenhagen 2024! A equipe se destacou por sua performance impecável e trabalho em equipe. Os jogadores foram fundamentais para a vitória, demonstrando habilidades excepcionais e estratégias inovadoras.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="edits">
+            <h2>Edits de CS2</h2>
+            <div class="edits">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5ddqTAxu0d4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/TH9UwKSuzZo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HeJdL5p_FZI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Entre em contato conosco através do e-mail: exemplo@dominio.com</p>
+            <p>Entre em contato conosco pelo e-mail: <a href="mailto:contato@exemplo.com">contato@exemplo.com</a></p>
+        </section>
+
+        <section id="momentos">
+            <h2>Melhores Momentos Copenhagen 2024</h2>
+            <div class="videos">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2ijtwyJvoAU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Edits de CS2. Todos os direitos reservados.</p>
+        <p>© 2023 Entusiastas de CS2. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
